# xatan

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  mise.toml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  config.rs  identity.rs  main.rs  prompt.rs  xata.rs
